--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <div class="hero">
     <nav>
-        <img src="/images/logo.png" alt="yafet-logo" class="logo">
+        <img src="images/logo.png" alt="yafet-logo" class="logo">
         <button class="mobile-menu-button">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M3 6.001H21V8.001H3V6.001ZM3 11.001H21V13.001H3V11.001ZM3 16.001H21V18.001H3V16.001Z"/>
@@ -33,9 +33,9 @@
       <p>I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
       <div class="social-links">
         <p>LET'S CONNECT</p>
-        <a href="#" target="_blank"><img src="/images/twitter.png" alt="Twitter"></a>
-        <a href="https://www.linkedin.com/in/yafet-aklilu-559a3432b/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
-        <a href="https://github.com/yafetaklilu" target="_blank"><img src="/images/github.png" alt="GitHub"></a>
+        <a href="#" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+        <a href="https://www.linkedin.com/in/yafet-aklilu-559a3432b/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+        <a href="https://github.com/yafetaklilu" target="_blank"><img src="images/github.png" alt="GitHub"></a>
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
   <div class="projects-section">
     <div class="project-card" data-modal-id="modal-ewallet">
       <div class="project-image" style="background-color: rgb(246, 206, 254);">
-        <img src="/images/web.png" alt="E-Wallet Project">
+        <img src="images/web.png" alt="E-Wallet Project">
       </div>
       <div class="project-details">
         <h1>E-Wallet</h1>
@@ -61,7 +61,7 @@
 
     <div class="project-card reverse" data-modal-id="modal-green-business">
       <div class="project-image" style="background-color: rgb(227, 250, 173);">
-        <img src="/images/web1.png" alt="Green Business Project">
+        <img src="images/web1.png" alt="Green Business Project">
       </div>
       <div class="project-details">
         <h1>Green Business</h1>
@@ -79,7 +79,7 @@
 
     <div class="project-card" data-modal-id="modal-marcom">
       <div class="project-image"  style="background-color: rgb(203, 253, 236);">
-        <img src="/images/web2.png" alt="Marcom Agency Project">
+        <img src="images/web2.png" alt="Marcom Agency Project">
       </div>
       <div class="project-details">
         <h1>Marcom Agency</h1>
@@ -97,7 +97,7 @@
 
     <div class="project-card reverse" data-modal-id="modal-mnmlst">
       <div class="project-image">
-        <img src="/images/web3.png" alt="Mnmlst Clothing Brand Project">
+        <img src="images/web3.png" alt="Mnmlst Clothing Brand Project">
       </div>
       <div class="project-details">
         <h1>Mnmlst Clothing Brand</h1>
@@ -126,7 +126,7 @@
         </button>
       </div>
       <div class="project-detail-image">
-        <img src="/images/web.png" alt="E-Wallet Project">
+        <img src="images/web.png" alt="E-Wallet Project">
       </div>
       <div class="project-detail-info">
         <div class="project-description">
@@ -161,7 +161,7 @@
         </button>
       </div>
       <div class="project-detail-image">
-        <img src="/images/web1.png" alt="Green Business Project">
+        <img src="images/web1.png" alt="Green Business Project">
       </div>
       <div class="project-detail-info">
         <div class="project-description">
@@ -197,7 +197,7 @@
         </button>
       </div>
       <div class="project-detail-image">
-        <img src="/images/web2.png" alt="Marcom Agency Project">
+        <img src="images/web2.png" alt="Marcom Agency Project">
       </div>
       <div class="project-detail-info">
         <div class="project-description">
@@ -230,7 +230,7 @@
         </button>
       </div>
       <div class="project-detail-image">
-        <img src="/images/web3.png" alt="Mnmlst Clothing Brand Project">
+        <img src="images/web3.png" alt="Mnmlst Clothing Brand Project">
       </div>
       <div class="project-detail-info">
         <div class="project-description">
@@ -256,9 +256,9 @@
       <p>Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
       <div class="about-social-links">
         <p>LET'S CONNECT</p>
-        <a href="#" target="_blank"><img src="/images/twitter.png" alt="Twitter"></a>
-        <a href="https://www.linkedin.com/in/yafet-aklilu-559a3432b/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
-        <a href="https://github.com/yafetaklilu" target="_blank"><img src="/images/github.png" alt="GitHub"></a>
+        <a href="#" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+        <a href="https://www.linkedin.com/in/yafet-aklilu-559a3432b/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+        <a href="https://github.com/yafetaklilu" target="_blank"><img src="images/github.png" alt="GitHub"></a>
       </div>
       <a href="#" class="resume-button">Get my resume</a>
     </div>
@@ -273,15 +273,15 @@
         </div>
         <div class="skill-content" id="languages-content">
           <div class="skill-item">
-            <img src="/images/js.webp" alt="JavaScript">
+            <img src="images/js.webp" alt="JavaScript">
             <span>JavaScript</span>
           </div>
           <div class="skill-item">
-            <img src="/images/1175208.webp" alt="HTML">
+            <img src="images/1175208.webp" alt="HTML">
             <span>HTML</span>
           </div>
           <div class="skill-item">
-            <img src="/images/css.webp" alt="CSS">
+            <img src="images/css.webp" alt="CSS">
             <span>CSS</span>
           </div>
         </div>
@@ -297,15 +297,15 @@
         <div class="skill-content" id="frameworks-content">
           <div class="skill-content" id="languages-content">
             <div class="skill-item">
-              <img src="/images/js.webp" alt="JavaScript">
+              <img src="images/js.webp" alt="JavaScript">
               <span>JavaScript</span>
             </div>
             <div class="skill-item">
-              <img src="/images/1175208.webp" alt="HTML">
+              <img src="images/1175208.webp" alt="HTML">
               <span>HTML</span>
             </div>
             <div class="skill-item">
-              <img src="/images/css.webp" alt="CSS">
+              <img src="images/css.webp" alt="CSS">
               <span>CSS</span>
             </div>
           </div>
@@ -322,15 +322,15 @@
         <div class="skill-content" id="skills-content">
           <div class="skill-content" id="languages-content">
             <div class="skill-item">
-              <img src="/images/js.webp" alt="JavaScript">
+              <img src="images/js.webp" alt="JavaScript">
                                   <span>JavaScript</span>
                                 </div>
                                 <div class="skill-item">
-                                  <img src="/images/1175208.webp" alt="HTML">
+                                  <img src="images/1175208.webp" alt="HTML">
                                   <span>HTML</span>
                                 </div>
                                 <div class="skill-item">
-                                  <img src="/images/css.webp" alt="CSS">
+                                  <img src="images/css.webp" alt="CSS">
                                   <span>CSS</span>
                                 </div>
                                 </div>
