--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           </svg>
         </button>
         <ul class="nav-links">
-          <li><a href="projects-section">Portfolio</a></li>
-          <li><a href="about-section">About</a></li>
-          <li><a href="contact-section">Contact</a></li>
+          <li><a href="#projects-section">Portfolio</a></li>
+          <li><a href="#about-section">About</a></li>
+          <li><a href="#contact-section">Contact</a></li>
           <li>
             <button class="close-menu-button">
               <svg viewBox="0 0 24 24" fill="currentColor">
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="projects-section">
+  <div class="projects-section" id="projects-section">
     <div class="project-card" data-modal-id="modal-ewallet">
       <div class="project-image" style="background-color: rgb(246, 206, 254);">
         <img src="images/web.png" alt="E-Wallet Project">
@@ -250,7 +250,7 @@
     </div>
   </div>
 
-  <div class="about-section">
+  <div class="about-section" id="about-section">
     <div class="about-info">
       <h2>About Myself</h2>
       <p>Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
@@ -339,7 +339,7 @@
                     </div>
                   </div>
 
-                  <div class="contact-section">
+                  <div class="contact-section" id="contact-section">
                     <div class="contact-content">
                       <h2>Contact me</h2>
                       <p>If you have an application you are interested in developing, a feature that you need built, or a project that needs coding, I'd love to help with it!</p>
