--- a/index.html
+++ b/index.html
@@ -264,80 +264,47 @@
     </div>
 
     <div class="about-skills">
-      <div class="skill-category">
-        <div class="skill-header">
-          <h3>Languages</h3>
-          <button class="dropdown-toggle" data-target="languages-content">
-            <svg viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
-          </button>
-        </div>
-        <div class="skill-content" id="languages-content">
-          <div class="skill-item">
-            <img src="images/js.webp" alt="JavaScript">
-            <span>JavaScript</span>
-          </div>
-          <div class="skill-item">
-            <img src="images/1175208.webp" alt="HTML">
-            <span>HTML</span>
-          </div>
-          <div class="skill-item">
-            <img src="images/css.webp" alt="CSS">
-            <span>CSS</span>
-          </div>
-        </div>
-      </div>
+  <div class="skill-category">
+    <div class="skill-header">
+      <h3>Languages</h3>
+      <button class="dropdown-toggle" data-target="languages-content">
+        <svg class="arrow-icon" viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
+      </button>
+    </div>
+    <div class="skill-content" id="languages-content">
+      <div class="skill-item"><img src="images/js.webp" alt="JavaScript"><span>JavaScript</span></div>
+      <div class="skill-item"><img src="images/1175208.webp" alt="HTML"><span>HTML</span></div>
+      <div class="skill-item"><img src="images/css.webp" alt="CSS"><span>CSS</span></div>
+    </div>
+  </div>
 
-      <div class="skill-category">
-        <div class="skill-header">
-          <h3>Frameworks</h3>
-          <button class="dropdown-toggle" data-target="frameworks-content">
-            <svg viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
-          </button>
-        </div>
-        <div class="skill-content" id="frameworks-content">
-          <div class="skill-content" id="languages-content">
-            <div class="skill-item">
-              <img src="images/js.webp" alt="JavaScript">
-              <span>JavaScript</span>
-            </div>
-            <div class="skill-item">
-              <img src="images/1175208.webp" alt="HTML">
-              <span>HTML</span>
-            </div>
-            <div class="skill-item">
-              <img src="images/css.webp" alt="CSS">
-              <span>CSS</span>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="skill-category">
+    <div class="skill-header">
+      <h3>Frameworks</h3>
+      <button class="dropdown-toggle" data-target="frameworks-content">
+        <svg class="arrow-icon" viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
+      </button>
+    </div>
+    <div class="skill-content" id="frameworks-content">
+      <div class="skill-item"><img src="images/vue.webp" alt="Vue"><span>Vue</span></div>
+      <div class="skill-item"><img src="images/react.webp" alt="React"><span>React</span></div>
+    </div>
+  </div>
 
-      <div class="skill-category">
-        <div class="skill-header">
-          <h3>Skills</h3>
-          <button class="dropdown-toggle" data-target="skills-content">
-            <svg viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
-          </button>
-        </div>
-        <div class="skill-content" id="skills-content">
-          <div class="skill-content" id="languages-content">
-            <div class="skill-item">
-              <img src="images/js.webp" alt="JavaScript">
-                                  <span>JavaScript</span>
-                                </div>
-                                <div class="skill-item">
-                                  <img src="images/1175208.webp" alt="HTML">
-                                  <span>HTML</span>
-                                </div>
-                                <div class="skill-item">
-                                  <img src="images/css.webp" alt="CSS">
-                                  <span>CSS</span>
-                                </div>
-                                </div>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
+  <div class="skill-category">
+    <div class="skill-header">
+      <h3>Skills</h3>
+      <button class="dropdown-toggle" data-target="skills-content">
+        <svg class="arrow-icon" viewBox="0 0 24 24"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
+      </button>
+    </div>
+    <div class="skill-content" id="skills-content">
+      <div class="skill-item"><img src="images/git.webp" alt="Git"><span>Git</span></div>
+      <div class="skill-item"><img src="images/figma.webp" alt="Figma"><span>Figma</span></div>
+    </div>
+  </div>
+</div>
+
 
                   <div class="contact-section" id="contact-section">
                     <div class="contact-content">
