--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-
+<div class="yeab"></div>
   <div class="projects-section" id="projects-section">
     <div class="project-card" data-modal-id="modal-ewallet">
       <div class="project-image" style="background-color: rgb(246, 206, 254);">
